--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<img src="images/IMG-5807.JPG" alt="Avatar">
+						<!-- <img src="images/IMG-5807.JPG" alt="Avatar"> -->
 						<h1>Pratyaksh Gautam</h1>
 						<p>I’m a graduate student at Northeastern University, studying Information Systems and Data Science. I am interested in Machine Learning, Deep Learning, Natural Language Processing and Recommendation Systems.</p>
 						<ul class="actions">
