--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
 -->
 <html>
 	<head>
+		<style>
+            .round {
+                border-radius: 50%;
+                overflow: hidden;
+                width: 150px;
+                height: 150px;
+            }
+            .round img {
+                display: block;
+            /* Stretch 
+                  height: 100%;
+                  width: 100%; */
+            min-width: 100%;
+            min-height: 100%;
+            }
+        </style>
 		<title>Pratyaksh's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -18,6 +34,9 @@
 
 				<!-- Intro -->
 					<div id="intro">
+						<div class="round">
+            						<img src="images/IMG-5807.JPG" />
+        					</div>
 						<!-- <img src="images/IMG-5807.JPG" alt="Avatar"> -->
 						<h1>Pratyaksh Gautam</h1>
 						<p>I’m a graduate student at Northeastern University, studying Information Systems and Data Science. I am interested in Machine Learning, Deep Learning, Natural Language Processing and Recommendation Systems.</p>
