--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
             .round {
                 border-radius: 50%;
                 overflow: hidden;
-                width: 350px;
-                height: 350px;
+                width: 450px;
+                height: 450px;
             }
             .round img {
                 display: block;
@@ -35,7 +35,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<div class="round">
-            						<img src="images/IMG-5807.JPG" />
+            						<img src="images/cover_pic.jpg" />
         					</div>
 						<!-- <img src="images/IMG-5807.JPG" alt="Avatar"> -->
 						<h1>Pratyaksh Gautam</h1>
