--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 										<h2><a href="https://github.com/Pratt2309/Titanic_Ensemble_Prediction">Titanic Survival Prediction</a></h2>
 									</header>
 									<a href="https://github.com/Pratt2309/Titanic_Ensemble_Prediction" class="image fit"><img src="images/titanic_main.png" alt="" /></a>
-									<p>n this case, we are trying to predict the survivability of a person in the Titanic disaster based on a few features.</p>
+									<p>In this case, we are trying to predict the survivability of a person in the Titanic disaster based on a few features.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Pratt2309/Titanic_Ensemble_Prediction" class="button">Full Story</a></li>
 									</ul>
