titanic notebook redirect

--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
 								<article>
 									<header>
 										
-										<h2><a href="https://github.com/Pratt2309/Titanic_Ensemble_Prediction">Titanic Survival Prediction</a></h2>
+										<h2><a href="https://github.com/Pratt2309/Titanic_Ensemble_Prediction/blob/master/Titanic_Ensemble_modeling.ipynb">Titanic Survival Prediction</a></h2>
 									</header>
-									<a href="https://github.com/Pratt2309/Titanic_Ensemble_Prediction" class="image fit"><img src="images/titanic_main.png" alt="" /></a>
+									<a href="https://github.com/Pratt2309/Titanic_Ensemble_Prediction/blob/master/Titanic_Ensemble_modeling.ipynb" class="image fit"><img src="images/titanic_main.png" alt="" /></a>
 									<p>In this case, we are trying to predict the survivability of a person in the Titanic disaster based on a few features.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/Pratt2309/Titanic_Ensemble_Prediction" class="button">Full Story</a></li>
+										<li><a href="https://github.com/Pratt2309/Titanic_Ensemble_Prediction/blob/master/Titanic_Ensemble_modeling.ipynb" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
