--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         					</div>
 						<!-- <img src="images/IMG-5807.JPG" alt="Avatar"> -->
 						<h1>Pratyaksh Gautam</h1>
-						<p>I’m a graduate student at Northeastern University, studying Information Systems and Data Science. I am interested in Machine Learning, Deep Learning, Natural Language Processing and Recommendation Systems.</p>
+						<p>I’m a graduate student at Northeastern University, studying Information Systems and Data Science. I am interested in the development of end to end Data Science pipeline using my skills in Machine Learning, Data Analytics & Data Engineering.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
