--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<div class="round">
             						<img src="images/cover_pic.jpg" />
         					</div>
-						<!-- <img src="images/IMG-5807.JPG" alt="Avatar"> -->
+						 <img src="images/cover_pic.jpg" alt="Avatar"> 
 						<h1>Pratyaksh Gautam</h1>
 						<p>I’m a graduate student at Northeastern University, studying Information Systems and Data Science. I am interested in developing end to end Data Science pipeline and visualize my findings to tell a story in a more unique & personalized way by using my skills in Machine Learning, Data Analytics & Data Engineering.</p>
 						<ul class="actions">
